# async-itertools

./: .coveragerc  .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: test_commit_pr.yml
async_itertools/: __init__.py
async_itertools/_combining/: chain.py  interleave.py
async_itertools/_wrapping/: as_async.py
docs/: conf.py  index.rst  requirements.txt
docs/reference/: combining.rst  index.rst  wrapping.rst
tests/test_combining/: test_chain.py  test_interleave.py
tests/test_wrapping/: test_as_async.py
