[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "async_itertools/_version.py"

[project]
name = "async-itertools"
description = "Routines for asynchronous iterables"
readme = "README.rst"
authors = [
    {name="Zhang Xiaoyu"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dynamic =["version"]
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/gszxy/async-itertools"

[project.optional-dependencies]
doc = [
    "sphinx",
    "furo",
]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "tox",
]

[tool.setuptools.packages.find]
include = ["async_itertools*"]
